manifests/2_multi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
      version: v1.0
  template:
    metadata:
      labels:
        role: app
        version: v1.0
    spec:
      containers:
      - name: app-container
        image: masayaaoyama/demo-app:v1.0
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
      version: v2.0
  template:
    metadata:
      labels:
        role: app
        version: v2.0
    spec:
      containers:
      - name: app-container
        image: masayaaoyama/demo-app:v2.0
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    role: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      role: db
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0
        volumeMounts:
        - name: init-sql-configmap
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-sql-configmap
          configMap:
            name: init-db-sql
---
# Create mysql Service for connecting mysql deployment from demo application
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  ports:
    - name: "mysql-port"
      protocol: "TCP"
      port: 3306
      targetPort: 3306
  selector:
    role: db
