manifests/4_ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
      version: v1.0
  template:
    metadata:
      labels:
        role: app
        version: v1.0
    spec:
      containers:
      - name: app-container
        image: masayaaoyama/demo-app:v1.0
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
      version: v2.0
  template:
    metadata:
      labels:
        role: app
        version: v2.0
    spec:
      containers:
      - name: app-container
        image: masayaaoyama/demo-app:v2.0
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-1
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    role: app
    version: v1.0
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-2
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    role: app
    version: v2.0
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-apps
spec:
  rules:
  - host: demo.example.com
    http:
      paths:
      - path: /path1/
        backend:
          serviceName: demo-app-1
          servicePort: 80
      - path: /path2/
        backend:
          serviceName: demo-app-2
          servicePort: 80
  # tls:
  # - hosts:
  #   - demo.example.com
  #   secretName: tls-sample
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-1
spec:
  serviceName: mysql-1
  replicas: 1
  selector:
    matchLabels:
      role: db
      version: v1.0
  template:
    metadata:
      labels:
        role: db
        version: v1.0
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0
        volumeMounts:
        - name: init-sql-configmap
          mountPath: /docker-entrypoint-initdb.d
        - name: db-vol
          mountPath: /var/lib/mysql
      volumes:
        - name: init-sql-configmap
          configMap:
            name: init-db-sql
  volumeClaimTemplates:
  - metadata:
      name: db-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 3G
---
# Create mysql Service for connecting mysql deployment from demo application
apiVersion: v1
kind: Service
metadata:
  name: mysql-1
spec:
  type: ClusterIP
  ports:
    - name: "mysql-port"
      protocol: "TCP"
      port: 3306
      targetPort: 3306
  selector:
    role: db
    version: v1.0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-2
spec:
  serviceName: mysql-2
  replicas: 1
  selector:
    matchLabels:
      role: db
      version: v2.0
  template:
    metadata:
      labels:
        role: db
        version: v2.0
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0
        volumeMounts:
        - name: init-sql-configmap
          mountPath: /docker-entrypoint-initdb.d
        - name: db-vol
          mountPath: /var/lib/mysql
      volumes:
        - name: init-sql-configmap
          configMap:
            name: init-db-sql
  volumeClaimTemplates:
  - metadata:
      name: db-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 3G
---
# Create mysql Service for connecting mysql deployment from demo application
apiVersion: v1
kind: Service
metadata:
  name: mysql-2
spec:
  type: ClusterIP
  ports:
    - name: "mysql-port"
      protocol: "TCP"
      port: 3306
      targetPort: 3306
  selector:
    role: db
    version: v2.0
